enrich secrity context with user info data